--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ li {
 
 ul {
 	margin: 0;
+	padding: 0;
 }
 
 img {
@@ -193,7 +194,7 @@ img {
 }
 	.headline-container h1{
 		text-align: center;
-		padding-top: 15px;
+		padding-top: 5px;
 		font-size: 55px;
 	}
 	
@@ -259,14 +260,39 @@ img {
 
 .container-text {
 	position: absolute;
-	background-color: black;
-	height: 50px;
-	width: 700px;
+	height: 200px;
+	width: 650px;
+	margin-top: 575px;
+	margin-left: 50px;
+	
 }
 
 .container p {
-	color: white;
+	color: black;
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase;
+
+}
+
+.container .button{
+	position: absolute;
+	width: 125px;
+	height: 125px;
+	margin-top: 550px;
+	margin-left: 800px;
+	background: url('../img/125x125-start-arrow-blue.png');
+
+}
+
+	.container .button:hover {
+		background: url('../img/125x125-start-arrow-green.png');
+	}
+
+.button p {
 	text-align: center;
+	font-size: 15px;
+	padding-top: 5px;
 }
 
 #body-container-1 {
@@ -285,26 +311,193 @@ img {
 	background: url('../img/container3.jpg');
 }
 
+/*Mixes*/
+
+.recipe-headline {
+	position: absolute;
+	background-color: black;
+	height: 100px;
+	width: 925px;
+	margin-left: 50px;
+	margin-top: 10px;
+	
+
+}
+
+.recipe-headline h1 {
+	color: white;
+	text-align: center;
+	padding-top: 30px;
+}
 .recipe-top-row {
-	margin-top: 190px;
+	
 	height: 700px;
-	width: 80%;
+	width: 1100px;
+	margin-top: 50px;
 	display: inline;
+	float: left;
+
 }
 
-.diagram-box{
+.recipe-top-row img {
 	float: left;
-	height: 354px;
-	width: 339px;
-	margin-left: 20px;
+	margin-top: 75px;
+	margin-left: 50px;
+	width: 550px;
+	height: 600px;
 }
 
-.drink-image-box {
+.recipe-text {
+	width: 350px;
 	float: left;
-	height: 354px;
-	width: 339px;
-	margin-left: 20px;
-	overflow: hidden;
+	margin-top: 75px;
+	margin-left: 25px;
+}
+
+.recipe-top-row h3 {
+	background-color: #003366;
+	color: white;
+	font-size: 30px;
+	padding-bottom: 25px;
+	padding-top: 25px;
+	text-align: center;
+}
+
+.recipe-top-row p {
+	padding-top: 10px;
+	color: black;
+	text-align: justify;
+	line-height: 23px;
+	font-size: 18px;
+}
+
+.recipe-button {
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 25px;
+	height: 125px;
+	width: 125px;
+	background: url('../img/down-arrow-blue.png');
+}
+	.recipe-button:hover {
+		background: url('../img/down-arrow-green.png');
+	}
+
+.recipe-button p {
+	text-align: center;
+	text-transform: uppercase;
+	padding-top: 130px;
+	font-family: "open sans";
+}
+
+.recipe-row-2 {
+	height: 400px;
+	width: 1100px;
+	margin-top: 25px;
+	margin-left: 50px;
+	margin-bottom: 10px;
+	float: left;
+
+}
+
+.recipe-row-2 img {
+	float: left;
+
+}
+
+.recipe-ingredients {
+	float: left;
+	margin-top: 10px;
+	width: 625px;
+	height: 400px;
+}
+
+.recipe-ingredients h1 {
+
+	margin-top: 10px;
+}
+
+.recipe-ingredient {
+	margin-top: 10px;
+	height: 200px;
+	width: 150px;
+	box-shadow: 3px 3px 5px #888888;
+	float: left;
+
+}
+
+.recipe-ingredient img {
+	margin-top: 10px;
+}
+
+.recipe-ingredient h3 {
+	padding-top: 10px;
+	color: black;
+	text-align: center;
+	font-size: 15px;
+}
+
+.recipe-ingredients li{
+	color: black;
+	padding-top: 25px;
+	list-style-type: none;
+	text-transform: uppercase;
+	font-family: 'Raleway', sans-serif;
+}
+
+.recipe-row-3 {
+	width: 1100px;
+	margin-left: 75px;
+	padding-top: 25px;
+}
+
+.recipe-row-4 {
+	margin-left: 75px;
+	width: 1100px;
+}
+
+
+
+.step {
+	height: 300px;
+	float: left;
+	margin-top: 50px;
+}
+
+.step-image{
+	height: 300px;
+	width: 300px;
+	outline: 1px solid black;
+	float: left;
+}
+
+.step-text {
+	float: left;
+	width: 400px;
+	margin-left: 50px;
+}
+
+.step-text h3 {
+	background: #003366;
+	color: white;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+}
+
+.step-text p {
+	text-align: justify;
+	color: black;
+	padding-top: 25px;
+}
+
+.recipe-ad {
+	float: left;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
+	height: 100px;
+
 }
 
 /*Appendix*/
@@ -335,9 +528,11 @@ img {
 #icon-column .row h1 {
 	padding-top: 25px;
 	padding-bottom: 25px;
-	color: red;
+	padding-left: 10px;
+	color: white;
+	background-color: red;
 	font-weight: bold;
-	width: 100%;
+	width: 1018px;
 	float: left;
 	height: 75px;
 
@@ -444,3 +639,5 @@ img {
 	.ingredient-text-box p {
 		color: black;
 	}
+
+/*CALCULATOR*/
