--- a/css/style.css
+++ b/css/style.css
@@ -201,11 +201,22 @@ img {
 	
 #headline-list{
 	padding-top: 10px;
-	width:700px;
+	width: 825px;
 	margin-left: auto;
 	margin-right: auto;
 	
 }
+
+#headline-list em li{
+	color: red;
+	border: none;
+	font-size: 20px;
+}
+	#headline-list em li {
+		background: none;
+		cursor: default;
+		color: red;
+	}
 
 #appendix-list #headline-list {
 	width: 575px;
@@ -381,9 +392,11 @@ img {
 }
 	.recipe-button:hover {
 		background: url('../img/down-arrow-green.png');
+		cursor: hand;
 	}
 
 .recipe-button p {
+
 	text-align: center;
 	text-transform: uppercase;
 	padding-top: 130px;
@@ -526,11 +539,10 @@ img {
 }
 
 #icon-column .row h1 {
-	padding-top: 25px;
+	margin-top: 50px;
 	padding-bottom: 25px;
 	padding-left: 10px;
-	color: white;
-	background-color: red;
+	color: red;
 	font-weight: bold;
 	width: 1018px;
 	float: left;
@@ -545,6 +557,7 @@ img {
 	box-shadow: 3px 3px 5px #888888;  
 	float: left;
 	margin-right: 5px;
+	margin-top: 5px;
 }
 	.icon-box:hover {
 		height: 250px;
@@ -613,31 +626,10 @@ img {
 
 /*Ingredient Page*/
 
-.ingredient-row {
-	position: absolute;
-	width: 1100px;
-	height: 500px;
-	margin-top: 125px;
-	margin-left: 10px;
-
+.recomendations {
+	height: 350px;
 }
 
-.ingredient-image-box{
-	height: 500px;
-	width: 500px;
-	float: left;
-	
-}
 
-.ingredient-text-box {
-	height: 500px;
-	width: 400px;
-	text-align: justify;
-	margin-top: 80px;
-	margin-left: 550px;
-}
-	.ingredient-text-box p {
-		color: black;
-	}
 
 /*CALCULATOR*/
