--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h2 {
 p {
 	font-family: 'Raleway', sans-serif;
 	margin: 0;
-	color: white;
+	color: black;
 }
 
 a {
@@ -177,16 +177,16 @@ img {
 /* Side Body */
 
 .side-body {
-	margin-left: 325px;
-	width: 80%;
+	/*margin-left: 325px;*/
+	width: 100%;
 
 
 }
 
 
 .headline-container {
-	width: 80%;
-	height: 125px;
+	width: 100%;
+	/*height: 125px;*/
 	margin-bottom: 25px;
 	position: fixed;
 	background: white;
@@ -202,9 +202,8 @@ img {
 #headline-list{
 	padding-top: 10px;
 	width: 825px;
-	margin-left: auto;
-	margin-right: auto;
 	
+	display: none;
 }
 
 #headline-list em li{
@@ -376,7 +375,6 @@ img {
 
 .recipe-top-row p {
 	padding-top: 10px;
-	color: black;
 	text-align: justify;
 	line-height: 23px;
 	font-size: 18px;
@@ -630,6 +628,130 @@ img {
 	height: 350px;
 }
 
-
-
 /*CALCULATOR*/
+
+
+
+/*RESPONSIVE*/
+
+#hamburger {
+    border: 1px solid #374C77;
+    border-radius: 3px 3px 3px 3px;
+    cursor: pointer;
+    display: block;
+    height: 24px;
+    padding: 3px 4px 3px;
+    position: relative;
+    width: 25px;
+    background: #4569b2;
+    background: -moz-linear-gradient(top,  #4569b2 0%, #4062a5 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4569b2), color-stop(100%,#4062a5));
+    background: -webkit-linear-gradient(top,  #4569b2 0%,#4062a5 100%);
+    background: -o-linear-gradient(top,  #4569b2 0%,#4062a5 100%);
+    background: -ms-linear-gradient(top,  #4569b2 0%,#4062a5 100%);
+    background: linear-gradient(to bottom,  #4569b2 0%,#4062a5 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4569b2', endColorstr='#4062a5',GradientType=0 );
+}
+
+/*
+The white stripes in the hamburger button
+*/
+#hamburger div {
+    background-color: #fff;
+    border: 1px solid #eee;
+    border-radius: 2px 2px 2px 2px;
+    height: 2px;
+    margin-top: 3px;
+    width: 90%;
+}
+
+nav {
+	left: -350px;
+	width: 350px;
+	background: url('../img/menu-pattern.jpg');
+	margin-top: 25px;
+	top: 0px;
+	position: fixed;
+
+}
+
+nav h1 {
+	color: #00CC99;
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid white;
+}
+
+/* Header styles */
+
+
+
+
+
+
+body {
+	overflow-x: hidden;
+}
+
+header {
+	display: none;
+}
+
+nav {
+	left: 0;
+	margin-top: 0;
+}
+
+.content {
+	margin-left: 350px;
+}
+
+.headline-container {
+	width: 80%;
+	height: 125px;
+}
+
+#headline-list {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+
+.navRight {
+	left: 0;
+}
+
+.bodyRight {
+	margin-left: 350px;
+}
+
+@media (max-width: 1000px) {
+	header {
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 10;
+		display: block;
+	}
+	.headline-container {
+		width: 100%;
+		height: auto;
+		/*height: 125px;*/
+	}
+	nav {
+		left: -350px;
+		margin-top: 25px;
+	}
+	.content {
+		margin-left: 0;
+
+	}
+
+	#headline-list {
+		display: none;
+	}
+	
+}
+
