Update with Stefan's HTML changes

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,4 +1,4 @@
-<div class="nav-panel">
+<nav>
   <div class="menu">
 
     <div class="menu-search">
@@ -47,4 +47,4 @@
     </div>
 
   </div>
-</div>
+</nav>
