--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,13 +6,15 @@
     {{#if name}} {{{ name }}} | {{/if}}Mix and Stones</title>
     <link rel="stylesheet" type="text/css" href="../css/normalize.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
-    <link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:100|Open+Sans' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="../js/jquery.js"></script>
   </head>
 
   <body>
-    {{{ body }}}
+    <div id="container">
+      {{{ body }}}
+    </div>
   </body>
 
 </html>
